# numaflow-rs

./: .gitignore  .rustfmt.toml  Cargo.toml  Makefile  README.md  build.rs  tarpaulin-report.html
.github/: CODEOWNERS
.github/workflows/: build-push.yml  ci.yaml  release.yaml
examples/all-sinks/: Cargo.toml  Dockerfile  Makefile
examples/all-sinks/manifests/: all-sinks.yaml
examples/all-sinks/src/: main.rs
examples/batchmap-cat/: Cargo.toml  Dockerfile  Makefile
examples/batchmap-cat/manifests/: simple-batchmap-cat.yaml  simple-map-cat.yaml
examples/batchmap-cat/src/: main.rs
examples/batchmap-flatmap/: Cargo.toml  Dockerfile  Makefile
examples/batchmap-flatmap/manifests/: simple-batchmap-flatmap.yaml
examples/batchmap-flatmap/src/: main.rs
examples/flatmap-stream/: Cargo.toml  Dockerfile  Makefile
examples/flatmap-stream/manifests/: simple-flatmap-stream.yaml
examples/flatmap-stream/src/: main.rs
examples/map-bypass-cat/: Cargo.toml  Dockerfile  Makefile
examples/map-bypass-cat/manifests/: map-bypass-cat.yaml
examples/map-bypass-cat/src/: main.rs
examples/map-cat/: Cargo.toml  Dockerfile  Makefile
examples/map-cat/manifests/: simple-map-cat.yaml
examples/map-cat/src/: main.rs
examples/map-even-odd/: Cargo.toml  Dockerfile  Makefile
examples/map-even-odd/manifests/: simple-map-even-odd.yaml
examples/map-even-odd/src/: main.rs
examples/map-tickgen-serde/: Cargo.toml  Dockerfile  Makefile
examples/map-tickgen-serde/manifests/: simple-map-udf.yaml
examples/map-tickgen-serde/src/: main.rs
examples/mapt-event-time-filter/: Cargo.toml  Dockerfile  Makefile
examples/mapt-event-time-filter/manifests/: event-time-filter.yaml
examples/mapt-event-time-filter/src/: main.rs
examples/on-success-log/: Cargo.toml  Dockerfile  Makefile
examples/on-success-log/src/: main.rs
examples/redis-sink/: Cargo.toml  Dockerfile  Makefile  README.md
examples/redis-sink/src/: main.rs
examples/reduce-counter/: Cargo.toml  Dockerfile  Makefile
examples/reduce-counter/manifests/: simple-reduce.yaml
examples/reduce-counter/src/: main.rs
examples/reduce-stream-counter/: Cargo.toml  Dockerfile  Makefile
examples/reduce-stream-counter/manifests/: simple-reduce-stream.yaml
examples/reduce-stream-counter/src/: main.rs
examples/session-counter/: Cargo.toml  Dockerfile  Makefile
examples/session-counter/manifests/: simple-session-reduce.yaml
examples/session-counter/src/: main.rs
examples/side-input/: Cargo.toml  Makefile
examples/side-input/manifests/: simple-sideinput.yaml
examples/side-input/src/: main.rs
examples/side-input/udf/src/: main.rs
examples/sideinput/: Cargo.toml  Dockerfile  Makefile
examples/sideinput-udf/: Cargo.toml  Dockerfile
examples/sideinput-udf/src/: main.rs
examples/sideinput/manifests/: simple-sideinput.yaml
examples/sideinput/src/: main.rs
examples/sideinput/udf/: Cargo.toml  Dockerfile  Makefile
examples/sideinput/udf/src/: main.rs
examples/simple-source/: Cargo.toml  Dockerfile  Makefile
examples/simple-source/manifests/: simple-source.yaml
examples/simple-source/src/: main.rs
examples/sink-log/: Cargo.toml  Dockerfile  Makefile
examples/sink-log/manifests/: simple-log-sink.yaml  simple-sink.yaml
examples/sink-log/src/: main.rs
examples/source-transformer-bypass/: Cargo.toml  Dockerfile  Makefile
examples/source-transformer-bypass/manifests/: simple-source-transformer.yaml  source-transformer-bypass.yaml
examples/source-transformer-bypass/src/: main.rs
examples/source-transformer-event-time-filter/: Cargo.toml  Dockerfile  Makefile
examples/source-transformer-event-time-filter/manifests/: event-time-filter.yaml
examples/source-transformer-event-time-filter/src/: main.rs
examples/source-transformer-now/: Cargo.toml  Dockerfile  Makefile
examples/source-transformer-now/manifests/: simple-source-transformer.yaml
examples/source-transformer-now/src/: main.rs
examples/stream-sorter/: Cargo.toml  Dockerfile  Makefile  README.md
examples/stream-sorter/manifests/: stream-sorter-pipeline.yaml
examples/stream-sorter/src/: main.rs
hack/: update_examples.sh
numaflow/: Cargo.toml  README.md  build.rs
numaflow/proto/: accumulator.proto  map.proto  metadata.proto  sessionreduce.proto  sideinput.proto  sink.proto  source.proto  sourcetransform.proto  store.proto
numaflow/src/: accumulator.rs  batchmap.rs  error.rs  lib.rs  map.rs  mapstream.rs  proto.rs  reduce.rs  reduce_stream.rs  reducestream.rs  servers.rs  serving_store.rs  session_reduce.rs  shared.rs  sideinput.rs  sink.rs  source.rs  sourcetransform.rs
numaflow/src/batchmap/: batchmap.rs  mod.rs
numaflow/src/common/: metadata.rs
numaflow/src/error/: mod.rs
numaflow/src/map/: map.rs  mod.rs
numaflow/src/mapstream/: mapstream.rs  mod.rs
numaflow/src/proto/: map.v1.rs  mod.rs  reduce.v1.rs  serving.v1.rs  sideinput.v1.rs  sink.v1.rs  source.v1.rs  sourcetransformer.v1.rs
numaflow/src/reduce/: mod.rs  reduce.rs
numaflow/src/servers/: accumulator.v1.rs  map.v1.rs  reduce.v1.rs  serving.v1.rs  sideinput.v1.rs  sink.v1.rs  source.v1.rs  sourcetransformer.v1.rs
numaflow/src/serving/: mod.rs  serving_store.rs
numaflow/src/shared/: grpc_server.rs  mod.rs  panic.rs  server.rs  shared.rs  traits.rs  types.rs  utils.rs
numaflow/src/sideinput/: mod.rs  sideinput.rs
numaflow/src/sink/: mod.rs  sink.rs
numaflow/src/source/: mod.rs  source.rs
numaflow/src/sourcetransform/: mod.rs  sourcetransform.rs
proto/: batchmap.proto  map.proto  reduce.proto  sink.proto  source.proto  udf.proto
src/: batchmap.rs  error.rs  function.rs  lib.rs  map.rs  reduce.rs  servers.rs  shared.rs  sideinput.rs  sink.rs  source.rs  sourcetransform.rs  startup.rs
src/servers/: batchmap.v1.rs  map.v1.rs  reduce.v1.rs  sink.v1.rs  source.v1.rs  sourcetransformer.v1.rs
