[package]
name = "numaflow"
version = "0.1.1"
edition = "2021"
rust-version = "1.80"
description = "Rust SDK for Numaflow"
authors = ["Numaflow Developers"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://numaproj.github.io/numaflow/"
repository = "https://github.com/numaproj/numaflow-rs"
keywords = ["numaflow", "streaming", "messaging", "event-driven"]
categories = ["network-programming", "api-bindings"]


[lib]
name = "numaflow"
path = "src/lib.rs"

[dependencies]
tonic = "0.12.2"
prost = "0.13.2"
prost-types = "0.13.2"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "signal"] }
tokio-util = "0.7.12"
tokio-stream = { version = "0.1.16", features = ["net"] }
serde = { version = "1.0.210", features = ["derive"] }
chrono = "0.4.38"
serde_json = "1.0.128"
futures-util = "0.3.30"
tracing = "0.1.40"
uuid = { version = "1.10.0", features = ["v4"] }
thiserror = "1.0"
hyper-util = "0.1.7"
lazy_static = "1.5.0"

[build-dependencies]
tonic-build = "0.12.2"

[dev-dependencies]
tempfile = "3.9.0"
tower = { version = "0.5.0", features = ["util"] }
