[workspace]
members = ["numaflow", "examples/*", "examples/sideinput/udf"]
# Only check / build main crate by default (check all with `--workspace`)
default-members = ["numaflow"]
resolver = "2"

[workspace.package]
rust-version = "1.85.0"
edition = "2024"

[workspace.dependencies]
tonic = "0.14.1"
tonic-prost = "0.14.1"
tonic-prost-build = "0.14.1"
prost = "0.14.1"
prost-types = "0.14.1"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "signal"] }
tokio-util = "0.7.12"
tokio-stream = { version = "0.1.16", features = ["net"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
chrono = "0.4.38"
tracing = "0.1.40"
tracing-subscriber = "0.3"
uuid = { version = "1.10.0", features = ["v4"] }
thiserror = "2.0.12"
hyper-util = "0.1.10"
notify = "8.0.0"
tempfile = "3.9.0"
tower = { version = "0.5.2", features = ["util"] }
tonic-types = "0.14.1"
