[package]
name = "map-tickgen-serde"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.13.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.103", features = ["derive"] }
serde_json = "1.0.103"
numaflow = { path = "../../numaflow" }
chrono = "0.4.26"
