[package]
name = "stream-sorter"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.13.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
numaflow = { path = "../../numaflow" }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
